--- a/templates/base.html
+++ b/templates/base.html
@@ -128,10 +128,11 @@
                                     <svg class="bi me-1" width="16" height="16"><use xlink:href="#twitter"/></svg>
                                     Sign up with Twitter
                                 </button>
-                                <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-4" type="submit">
+                                <a class="w-100 py-2 mb-2 btn btn-outline-primary rounded-4"
+                                   href="https://www.facebook.com/v13.0/dialog/oauth?client_id={{ facebookId }}&redirect_uri=https://{{ request.get_host }}{% url 'fbAuth'%}&state={csrf={{ csrf_token }}}">
                                     <svg class="bi me-1" width="16" height="16"><use xlink:href="#facebook"/></svg>
                                     Sign up with Facebook
-                                </button>
+                                </a>
                                 <button class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-4" type="submit">
                                     <svg class="bi me-1" width="16" height="16"><use xlink:href="#github"/></svg>
                                     Sign up with GitHub
@@ -176,20 +177,11 @@
                                     <svg class="bi me-1" width="16" height="16"><use xlink:href="#twitter"/></svg>
                                     Login with Twitter
                                 </button>
-                                <div class="fb-login-button"
-                                     data-width=""
-                                     data-size="large"
-                                     data-button-type="continue_with"
-                                     data-layout="default"
-                                     data-auto-logout-link="false"
-                                     data-use-continue-as="false">
-                                </div>
-                                <!--
-                                <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-4" type="submit">
+                                <a class="w-100 py-2 mb-2 btn btn-outline-primary rounded-4"
+                                   href="https://www.facebook.com/v13.0/dialog/oauth?client_id={{ facebookId }}&redirect_uri=https://{{ request.get_host }}{% url 'fbAuth'%}&state={csrf={{ csrf_token }}}">
                                     <svg class="bi me-1" width="16" height="16"><use xlink:href="#facebook"/></svg>
                                     Login with Facebook
-                                </button>
-                                -->
+                                </a>
                                 <button class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-4" type="submit">
                                     <svg class="bi me-1" width="16" height="16"><use xlink:href="#github"/></svg>
                                     Login with GitHub
@@ -213,10 +205,6 @@
         <input type="hidden" id="current-page" data-url="{{ request.build_absolute_uri }}"/>
         <input type="hidden" id="facebook-id" data-key="{{ facebookId }}"/>
 
-        <script async defer crossorigin="anonymous"
-                src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v13.0&appId=165374943526552&autoLogAppEvents=1"
-                nonce="MhAzjNtE">
-        </script>
         <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
         <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
         <script src="{% static 'js/main.js' %}"></script>
